fixed slider issue on mobile

--- a/dev/styles/_projects.scss
+++ b/dev/styles/_projects.scss
@@ -11,6 +11,8 @@
             @media (max-width: 810px) {
                 & {
                     flex-direction: column;
+                    width: 76vw !important;
+                    padding: 0 1vw;
                 }
             }
         }
